--- a/samples/KristofferStrube.Blazor.BanditAlgorithms.BlazorWasm/KristofferStrube.Blazor.BanditAlgorithms.BlazorWasm.csproj
+++ b/samples/KristofferStrube.Blazor.BanditAlgorithms.BlazorWasm/KristofferStrube.Blazor.BanditAlgorithms.BlazorWasm.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.3" PrivateAssets="all" />
+    <PackageReference Include="Tewr.BlazorWorker.BackgroundService" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
